# peek

./: .gitignore  LICENSE  README.md  index.html  latest.json.example  package-lock.json  package.json  vite.config.ts
scripts/: build-release.sh  generate-latest-json.js  release.sh  sync-version.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: About.tsx  ContextMenu.tsx  EmptyState.tsx  FileDropZone.tsx  FileInfoPanel.tsx  Header.tsx  PreviewContainer.tsx  Sidebar.tsx
src/previewers/: HtmlPreviewer.tsx  JsonPreviewer.tsx  LogPreviewer.tsx  MarkdownPreviewer.tsx  TextPreviewer.tsx  UnsupportedPreviewer.tsx
src/store/: useStore.ts
src/utils/: fileTree.ts  fileTypes.ts  fileUtils.ts  recent.ts
